stdout
compiling CircularBufferTest.cpp
In file included from /cpputest/include/CppUTest/TestHarness.h:40,
                 from CircularBufferTest.cpp:6:
CircularBufferTest.cpp: In member function 'virtual void TEST_CircularBuffer_create_destroy_Test::testBody()':
CircularBufferTest.cpp:43:31: error: invalid use of void expression
   43 |    FAIL(CircularBuffer_Destroy(buffer));
      |         ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
/cpputest/include/CppUTest/UtestMacros.h:342:39: note: in definition of macro 'FAIL_LOCATION'
  342 |   do { UtestShell::getCurrent()->fail(text,  file, line); } while(0)
      |                                       ^~~~
CircularBufferTest.cpp:43:4: note: in expansion of macro 'FAIL'
   43 |    FAIL(CircularBuffer_Destroy(buffer));
      |    ^~~~
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:520: objs/CircularBufferTest.o] Error 1
